Fix alignment of social media icons in footer by centering them in grid container using justify-self property

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,7 +121,7 @@ nav img {
 
 #hero-image {
     display: grid;
-    min-width: 350px;
+    min-width: 320px;
     width: 100%;
     height: 500px;
     object-fit: cover;
@@ -756,7 +756,7 @@ input[type=submit] {
         grid-template-columns: repeat(auto-fit, minmax(25px, 1fr));
         grid-gap: 15px;
         padding-left: 15px;
-        margin-left: 0.8em;
+        justify-items: center;
     }
 
     #class-table {
